# pyBacktrack

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  Readme.txt  age_to_depth.py  backstrip.py  backtrack.py  backtrack_bundle.py  call_system_command.py  interpolate.py  lithology.py  rifting.py  sea_level.py  setup.cfg  setup.py  well.py
Docker/: Dockerfile  Readme.txt  notebook.sh
conda/: meta.yaml
docs/: Makefile  README.md  conf.py  document_extended_lithologies.txt  index.rst  make.bat  project_description.txt  pybacktrack_backstrip.rst  pybacktrack_backtrack.rst  pybacktrack_examples.rst  pybacktrack_getting_started.rst  pybacktrack_installation.rst  pybacktrack_lithologies.rst  pybacktrack_overview.rst  pybacktrack_paleo_bathymetry.rst  pybacktrack_reference.rst  pybacktrack_stratigraphy.rst  requirements.txt
misc/: Readme.txt  convert_GA_well.py  convert_old_wells.py  convert_sediment_to_water_thickness.py  convert_to_netcdf4.py  generate_lithologies_from_python_dict.py  generate_rift_grids.py  generate_rift_start_end_grids.py  lithology_dictionary.py  merge_paleo_bathymetry_grids.py  test_multipoint_came_from_static_polygons.py
pybacktrack/: __init__.py  age_to_depth.py  age_to_depth_cli.py  backstrip.py  backstrip_cli.py  backtrack.py  backtrack_bundle.py  backtrack_cli.py  bundle_data.py  documentation.py  dynamic_topography.py  dynamic_topography_cli.py  install_examples.py  install_supplementary.py  lithology.py  paleo_bathymetry.py  paleo_bathymetry_cli.py  rifting.py  sea_level.py  version.py  well.py  (+2 more)
(+599 files in other folders)
