[metadata]
# According to http://wheel.readthedocs.io this is the only way to get the license file into a wheel (in the '.dist-info' directory).
license_file = LICENSE

[aliases]
# So that 'python setup.py test' runs 'pytest'.
test=pytest

[tool:pytest]
#
# To include a check for PEP8 code style add '--pep8' as in the following two alternatives:
#
#     pytest --pep8
#
#     python setup.py test --addopts="--pep8"
#
# Ignoring E129: PEP8 style actually allows same indentation in multiline ‘if’ statement, so not sure why this is flagged as an error.
# Ignoring E501: Lines longer than 80 characters are really not a problem these days with high-resolution monitors.
# Ignoring W293: It is nice to have blank lines indent to the same level as previous line, and makes writing/editing code easier.
#
pep8ignore = E129 E501 W293

# Don't search these directories for tests.
norecursedirs = .git misc build dist docs
